--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -16,3 +16,5 @@
 /DesafioPolimorfismo_Caelum/
 /DesafioPolimorfismo_Douglas/
 /DesafioPolimorfismoAlgaWorks/
+/DesafioPolimorfismoDevMedia/
+/DesafioPolimorfismoCaelum/
