--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="3-OrientaçãoObjetos1"/>
 	<classpathentry kind="src" path="4-WrappersBoxingArrays"/>
 	<classpathentry kind="src" path="5-OrientaçãoObjetos2"/>
+	<classpathentry kind="src" path="6 - TópicoAvançado"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
